# dino-experiment

./: .gitignore  CMakeLists.txt  README.md
dino/core/: CMakeLists.txt  command.h  commandexecuter.cc  commandexecuter.h  commandstack.cc  commandstack.h  commandstackexception.h  connection.h  currentuser.cc  currentuser.h  dexception.cc  dexception.h  dexception_code.cc  dobject.cc  dobject.h  dobjfileinfo.h  dobjinfo.h  dobjpath.h  dvalue.h  filetypes.h  fspath.h  fwd.h  logger.cc  logger.h  objectfactory.h  ptrdefs.h  session.cc  session.h  sessionexception.h
dino/core/detail/: dataioexception.h  dataiofactory.cc  dataiofactory.h  dexception_code.cc  jsondataio.cc  jsondataio.h  jsonwritersupport.h  objectdata.cc  objectdata.h  objectdataexception.h
dino/qt/: CMakeLists.txt  dinotablemodel.cc  dinotablemodel.h
example/: CMakeLists.txt
example/dinotable/: CMakeLists.txt  dinotable.cc  dinotable.h  main.cc  mainwindow.cc  mainwindow.h
src/: CMakeLists.txt
src/dino/core/: callback.h  command.h  commandexecuter.cc  commandexecuter.h  commandstack.cc  commandstack.h  connection.h  currentuser.cc  dexception.cc  dexception.h  dexception_code.cc  dobject.cc  dobject.h  dobjectexception.h  dobjinfo.cc  dobjinfo.h  dobjpath.cc  dobjpath.h  dvalue.h  filetypes.h  fwd.h  objectfactory.cc  objectfactory.h  session.cc  session.h
src/dino/core/detail/: dataio.h  dexception_code.cc  jsondataio.cc  jsonexception.h  objectdata.cc  objectdata.h  objectdataexception.h
src/dino/qt/: columninfo.cc  columninfo.h  dobjectkeyvaluetablemodel.cc  dobjectkeyvaluetablemodel.h  dobjecttablemodel.cc  dobjecttablemodel.h  dobjecttreemodel.cc  dobjecttreemodel.h  utils.cc  utils.h
tests/: CMakeLists.txt  attribute_test.cc  dataio_test.cc  dvalue_test.cc  flattenedinherit_test.cc  inherit_test.cc  object_test.cc  objectfactory_test.cc
